--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <h1>Проект Эйлера</h1>
 <h3>Задача:</h3>
-<p>Если выписать все натуральные числа меньше 10, кратные 3 или 5, то получим 3, 5, 6 и 9. Сумма этих чисел равна 23.<br>
-Найдите сумму всех чисел меньше 1000, кратных 3 или 5.</p>
-
+<p>Каждый следующий элемент ряда Фибоначчи получается при сложении двух предыдущих. Начиная с 1 и 2, первые 10 элементов
+  будут:
+  <br>
+  1, 2, 3, 5, 8, 13, 21, 34, 55, 89, ...
+  <br>
+  Найдите сумму всех четных элементов ряда Фибоначчи, которые не превышают четыре миллиона.</p>
 <h3>Ответ:</h3>
-<p>{{ sum }}</p>
+    <b>Все фиб до 4 000 000:</b> {{ fibFilter4000000 }}<br>
+    <b>Все четные:</b> {{ fibFilterEven }}<br>
+    <b>Сумма:</b> {{ fibSumEven4000000 }}
