Задача 3 - Наибольший простой делитель

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,7 @@
 <h1>Проект Эйлера</h1>
 <h3>Задача:</h3>
-<p>Каждый следующий элемент ряда Фибоначчи получается при сложении двух предыдущих. Начиная с 1 и 2, первые 10 элементов
-  будут:
-  <br>
-  1, 2, 3, 5, 8, 13, 21, 34, 55, 89, ...
-  <br>
-  Найдите сумму всех четных элементов ряда Фибоначчи, которые не превышают четыре миллиона.</p>
+<p>Простые делители числа 13195 - это 5, 7, 13 и 29.<br>
+  Каков самый большой делитель числа 600851475143, являющийся простым числом?
 <h3>Ответ:</h3>
-    <b>Все фиб до 4 000 000:</b> {{ fibFilter4000000 }}<br>
-    <b>Все четные:</b> {{ fibFilterEven }}<br>
-    <b>Сумма:</b> {{ fibSumEven4000000 }}
+<b>Простые делителы числа {{ delNumber }}:</b> {{ delNumberSimpleNumbers }}<br>
+<b>Самый большой делитель:</b> {{ delNumberSimpleNumbersMax }}
