Задача 4 - Наибольшее произведение-палиндром

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <h1>Проект Эйлера</h1>
 <h3>Задача:</h3>
-<p>Простые делители числа 13195 - это 5, 7, 13 и 29.<br>
-  Каков самый большой делитель числа 600851475143, являющийся простым числом?
+<p>Число-палиндром с обеих сторон (справа налево и слева направо) читается одинаково. Самое большое число-палиндром, полученное умножением двух двузначных чисел – 9009 = 91 × 99.
+<br>Найдите самый большой палиндром, полученный умножением двух трехзначных чисел.
 <h3>Ответ:</h3>
-<b>Простые делителы числа {{ delNumber }}:</b> {{ delNumberSimpleNumbers }}<br>
-<b>Самый большой делитель:</b> {{ delNumberSimpleNumbersMax }}
+{{ MaxPalindrome }}
+<h3>Решение: </h3>
+<pre>
+    <code [innerHTML]="code"></code>
+</pre>
