--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,7 @@ body {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
+pre {
+    background-color: rebeccapurple;
+    display: inline-block;
+}
