Задача 5 - Наименьшее кратное

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <h1>Проект Эйлера</h1>
 <h3>Задача:</h3>
-<p>Число-палиндром с обеих сторон (справа налево и слева направо) читается одинаково. Самое большое число-палиндром, полученное умножением двух двузначных чисел – 9009 = 91 × 99.
-<br>Найдите самый большой палиндром, полученный умножением двух трехзначных чисел.
-<h3>Ответ:</h3>
-{{ MaxPalindrome }}
+<p>2520 - самое маленькое число, которое делится без остатка на все числа от 1 до 10.<br>
+Какое самое маленькое число делится нацело на все числа от 1 до 20?</p>
+<h3>Ответ: {{ otvet }}</h3>
 <h3>Решение: </h3>
 <pre>
     <code [innerHTML]="code"></code>
