Задача 6 - Разность между суммой квадратов и квадратом суммы

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,14 @@
 <h1>Проект Эйлера</h1>
 <h3>Задача:</h3>
-<p>2520 - самое маленькое число, которое делится без остатка на все числа от 1 до 10.<br>
-Какое самое маленькое число делится нацело на все числа от 1 до 20?</p>
+<p>Сумма квадратов первых десяти натуральных чисел равна
+<br>
+    12 + 22 + ... + 102 = 385
+    Квадрат суммы первых десяти натуральных чисел равен
+    <br>
+    (1 + 2 + ... + 10)2 = 552 = 3025
+    Следовательно, разность между суммой квадратов и квадратом суммы первых десяти натуральных чисел составляет 3025 − 385 = 2640.
+    <br>
+    Найдите разность между суммой квадратов и квадратом суммы первых ста натуральных чисел.?</p>
 <h3>Ответ: {{ otvet }}</h3>
 <h3>Решение: </h3>
 <pre>
