Задача 7 - 10001-ое простое число

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,10 @@
 <h1>Проект Эйлера</h1>
 <h3>Задача:</h3>
-<p>Сумма квадратов первых десяти натуральных чисел равна
+<p>
+    Выписав первые шесть простых чисел, получим 2, 3, 5, 7, 11 и 13. Очевидно, что 6-ое простое число - 13.
 <br>
-    12 + 22 + ... + 102 = 385
-    Квадрат суммы первых десяти натуральных чисел равен
-    <br>
-    (1 + 2 + ... + 10)2 = 552 = 3025
-    Следовательно, разность между суммой квадратов и квадратом суммы первых десяти натуральных чисел составляет 3025 − 385 = 2640.
-    <br>
-    Найдите разность между суммой квадратов и квадратом суммы первых ста натуральных чисел.?</p>
+Какое число является 10001-ым простым числом?
+</p>
 <h3>Ответ: {{ otvet }}</h3>
 <h3>Решение: </h3>
 <pre>
