Задача 10 - Сложение простых чисел

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,11 @@
 <h1>Проект Эйлера</h1>
 <h3>Задача:</h3>
 <p>
-    Тройка Пифагора - три натуральных числа a < b < c, для которых выполняется равенство
-    <br>
-    a^2 + b^2 = c^2<br>
-    Например, 3^2 + 4^2 = 9 + 16 = 25 = 5^2.
-    <br>
-    Существует только одна тройка Пифагора, для которой a + b + c = 1000.<br>
-    Найдите произведение abc.
+    Сумма простых чисел меньше 10 равна 2 + 3 + 5 + 7 = 17.
+<br>
+    Найдите сумму всех простых чисел меньше двух миллионов. <b>P.S: 2000</b> взял потому что 2 миллионов долго будет считать!  
 </p>
-<h3>Ответ: {{ otvet }}: a + b + c = {{ otvet2 }}; abc = {{ otvet3 }}</h3>
+<h3>Ответ: {{ otvet }}</h3>
 <h3>Решение: </h3>
 <pre>
     <code [innerHTML]="code"></code>
